Clojure Collector: changed access-valve to use Gradle (#899)
Clojure Collector: changed access-valve to publish to war-resources/.ebextensions (#900)
Clojure Collector: updated access-valve to log POSTs (#901)                               - TODO
Clojure Collector: fixed IP address forwarding for VPC-based environments (#854)
Clojure Collector: added support for POST as well as GET (#654)                                         - TODO
Scala Common Enrich: added support for GET querystring containing N raw events as JSON (#543)           - TODO
Scala Common Enrich: updated EnrichmentManager to process JSON fields (#903)                            - TODO
Scala Common Enrich: added input adapter to convert NV pairs to JSON (#904)                             - TODO
Scala Hadoop Enrich: updated to support generating multiple enriched events from one raw payload (#902) - TODO
StorageLoader: wrote JSON Path file for mobile_context (#776)
Redshift: added Redshift DDL for mobile_context (#542)

Version 0.9.6 (2014-07-26)
--------------------------
Java Tracker: bumped git submodule to 0.4.0 (#892)
EmrEtlRunner: bumped to 0.9.0
EmrEtlRunner: passed etl_tstamp into Hadoop Enrich as an argument (#396)
EmrEtlRunner: removed enrichment-specific code (#811)
EmrEtlRunner: removed enrichment-specific parameters from config.yml.sample (#809)
EmrEtlRunner: replaced enrichment-specific arguments from EmrEtlRunner (#808)
EmrEtlRunner: removed %3D code following Scalding upgrade (#849)
EmrEtlRunner: fixed contract on partition_by_run (#894)
EmrEtlRunner: updated Bash script to support enrichments path (#916)
StorageLoader: bumped to 0.3.1
StorageLoader: now looking in eu-west-1 region for s3://snowplow-hosted-assets (#895)
StorageLoader: updated combined Bash script to support enrichments path (#917)
Scala Hadoop Enrich: bumped to 0.6.0
Scala Hadoop Enrich: bumped Scala to 2.10.4 (#912)
Scala Hadoop Enrich: bumped Scalding to 0.11.1 (#911)